--- a/index2.org
+++ b/index2.org
@@ -156,6 +156,70 @@
 ==1
 ==1
 ==1
+==2
+==1
+==1
+==1
+==1
+==1
+==2
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==2
+==2
+==1
+==1
+==2
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
+==1
 ==1
 ==1
 ==1
@@ -335,7 +399,7 @@
   join work_package t2
   on t1.id = t2.container_id
   where t2.status != 'DONTSHOW'
-  "
+  order by container_task_title"
   )
   str(datin)
   datin_done  <- dbGetQuery(ch,
@@ -389,14 +453,14 @@
   select tab1.container_task_title, tab1.task_id, 
   'depends on ' || tab1.blocker || ' from Container ' || tab2.container_task_title as depends_on,
   tab2.end_date as start_date, 
-  tab1.efforti
+  tab1.efforti, tab1.status
   from
   (
     select t1.container_task_title,
     t1.task_id, t1.blocker,
     t1.start_date,
     t1.end_date,
-    t1.efforti
+    t1.efforti, t1.status
     from indat t1
     where t1.blocker is not null
     ) tab1
@@ -417,11 +481,13 @@
     t1.task_id as depends_on,  
     t1.start_date,
     t1.efforti,
+    t1.status,
     t1.end_date
     from indat t1
-    where t1.blocker is null
+    where t1.blocker is null or t1.blocker = ''
+    order by container_task_title
   ", drv = 'SQLite')
-  #datin
+  datin[,1]
   datin <- rbind(datin, datin_depends)
   datin[1,]
   #datin
@@ -458,15 +524,15 @@
   # plot
   dat_out <- get_gantt_data(test_data = F)
   str(dat_out)
-  svg("AAPL.svg",width=26,height=14)
+  
   gantt_tufte <- function(
     indat = dat_out
     ,
     smidge_lab = .15
     ,
-    focal_date = '2015-01-12' # Sys.Date()
+    focal_date = '2015-01-18' # Sys.Date()
     ,
-    time_box = 7 * 3
+    time_box = 7 * 2.5
     ,
     end_task_ticks = F
   ,
@@ -476,19 +542,37 @@
   ,
   cex_context_points = 0.5
   ,
+  min_context_xrange =  NA
+  , 
+  max_context_xrange = NA
+  ,
   cex_detail_ylab = 0.7
   ,
   cex_detail_points = 0.7
   ,
   cex_detail_labels = 0.7
-  #  ){
+    ){
     focal_date <- as.Date(focal_date)
     m <- matrix(c(1,2), 2, 1)
     layout(m, widths=c(1), heights=c(.5,4))
     par(mar = c(3,16,2,1))
     # layout.show(2)
+  
+  
     yrange <- c((min(indat$loc2) - smidge_lab), (max(indat$loc2) + smidge_lab))
-    xrange  <- c(min(indat$start_date, na.rm = T),max(indat$end_date, na.rm=T))
+    if(!is.na(min_context_xrange)){
+    xmin <- as.Date(min_context_xrange)    
+    } else {
+    xmin <- min(indat$start_date, na.rm = T)
+    }
+    if(!is.na(max_context_xrange)){
+    xmax <- as.Date(max_context_xrange)    
+    } else {
+    xmax <- max(indat$start_date, na.rm = T)
+    }
+  
+    xrange  <- c(xmin,xmax)
+    
     # xrange
     #### context ####
     
@@ -527,14 +611,34 @@
     points(indat$start_date, indat$loc2, pch = 16, cex = cex_detail_points)
     text(indat$start_date, indat$loc2 - smidge_lab, labels = indat$task_id, pos = 4,
          cex = cex_detail_labels)
-    bumped_up <- indat[indat$start_date < focal_date & indat$end_date > focal_date,]
-    text(focal_date, bumped_up$loc2 - smidge_lab, labels = bumped_up$task_id, pos = 4,
-         cex = cex_detail_labels, col = "darkgrey")
     for(i in 1:nrow(indat)){
     # = 1
       segments(indat$start_date[i] , js[i] , indat$start_date[i] , max(indat$loc2) + 1 , lty = 3)
       segments(indat$start_date[i] , js[i] , indat$end_date[i] , js[i] )
     }
+  
+    # done
+    indat_done  <- indat[indat$status == "DONE",]
+    points(indat_done$start_date, indat_done$loc2, pch = 16, cex = cex_detail_points, col = "darkgrey")
+    text(indat_done$start_date, indat_done$loc2 - smidge_lab, labels = indat_done$task_id, pos = 4,
+         cex = cex_detail_labels, col = "darkgrey")  
+    for(i in 1:nrow(indat_done)){
+    # = 1
+      segments(indat_done$start_date[i] , indat_done$loc2[i] , indat_done$start_date[i] , max(indat_done$loc2) + 1 , lty = 3, col = 'darkgrey')
+      segments(indat_done$start_date[i] , indat_done$loc2[i] , indat_done$end_date[i] , indat_done$loc2[i], col = 'darkgrey' )
+    }
+  
+    # continuing
+    bumped_up <- indat[indat$start_date < focal_date & indat$status != 'DONE',]
+    text(focal_date, bumped_up$loc2 - smidge_lab, labels = bumped_up$task_id, pos = 4,
+         cex = cex_detail_labels, col = 'darkgrey')
+  
+    
+    # overdue
+    ## bumped_up <- indat[indat$end_date < focal_date & indat$status != 'DONE',]
+    ## text(focal_date, bumped_up$loc2 - smidge_lab, labels = bumped_up$task_id, pos = 4,
+    ##      cex = cex_detail_labels, col = 'darkorange')
+    
     #segments(focal_date, yrange[1], focal_date, yrange[2], 'red')
     xstart_date <- ifelse(wday(focal_date) != 1, focal_date - (wday(focal_date) - 2), focal_date)
     xend <- ifelse(wday(focal_date + time_box) != 7, (focal_date + time_box) + (5-wday(focal_date + time_box)), (focal_date + time_box))
@@ -553,9 +657,11 @@
     axis(3, at = at_dates2, labels = label_dates)
     #segments(min(xrange), max(yrange) + .09, max(xrange), max(yrange) + .09)  
     
-  # }
+  }
   #ls()
-  #gantt_tufte(datin2, focal_date = as.Date("2014-12-10"))
+  svg("AAPL.svg",width=26,height=14)
+  gantt_tufte(dat_out, focal_date = "2015-01-19",
+   min_context_xrange = "2015-01-01")
   dev.off()
   
 #+end_src
