--- a/index2.org
+++ b/index2.org
@@ -577,6 +577,8 @@ query can be db.dataset.contact.like('Lach%')
     smidge_lab = .15
     ,
     focal_date = '2015-01-18' # Sys.Date()
+    , 
+    show_today = TRUE
     ,
     time_box = 7 * 2.5
     ,
@@ -602,7 +604,7 @@ query can be db.dataset.contact.like('Lach%')
     ){
     focal_date <- as.Date(focal_date)
     m <- matrix(c(1,2), 2, 1)
-    layout(m, widths=c(1), heights=c(.5,4))
+    layout(m, widths=c(1), heights=c(.75,4))
     par(mar = c(3,16,2,1))
     # layout.show(2)
   
@@ -631,22 +633,22 @@ query can be db.dataset.contact.like('Lach%')
     polygon(c(focal_date, focal_date + time_box, focal_date + time_box, focal_date), c(rep(yrange[1],2), rep(yrange[2],2)), col = 'lightyellow', border = 'lightyellow')
   # DONE is grey
   indat_done <- indat[indat$status == 'DONE',]
-    points(indat_done$start_date, indat_done$loc, pch = 16, cex = cex_context_points, col = 'grey')
-    #text(indat_done$start_date, indat_done$loc - smidge_lab, labels = indat_done$task_id, pos = 4)
-    js <- indat_done$loc
+    points(indat_done$start_date, indat_done$loc2, pch = 16, cex = cex_context_points, col = 'grey')
+    #text(indat_done$start_date, indat_done$loc2 - smidge_lab, labels = indat_done$task_id, pos = 4)
+    js <- indat_done$loc2
     for(i in 1:nrow(indat_done)){
     # = 1
-      segments(indat_done$start_date[i] , js[i] , indat_done$start_date[i] , max(indat_done$loc) + 1 , lty = 3, col = 'grey')
+      segments(indat_done$start_date[i] , js[i] , indat_done$start_date[i] , max(indat_done$loc2) + 1 , lty = 3, col = 'grey')
       segments(indat_done$start_date[i] , js[i] , indat_done$end_date[i] , js[i], col = 'grey')
     }
   # indat todo is black
   indat_todo <- indat[indat$status == 'TODO',]
-    points(indat_todo$start_date, indat_todo$loc, pch = 16, cex = cex_context_points)
-    #text(indat_todo$start_date, indat_todo$loc - smidge_lab, labels = indat_todo$task_id, pos = 4)
-    js <- indat_todo$loc
+    points(indat_todo$start_date, indat_todo$loc2, pch = 16, cex = cex_context_points)
+    #text(indat_todo$start_date, indat_todo$loc2 - smidge_lab, labels = indat_todo$task_id, pos = 4)
+    js <- indat_todo$loc2
     for(i in 1:nrow(indat_todo)){
     # = 1
-      segments(indat_todo$start_date[i] , js[i] , indat_todo$start_date[i] , max(indat_todo$loc) + 1 , lty = 3)
+      segments(indat_todo$start_date[i] , js[i] , indat_todo$start_date[i] , max(indat_todo$loc2) + 1 , lty = 3)
       segments(indat_todo$start_date[i] , js[i] , indat_todo$end_date[i] , js[i] )
     }  
     #segments(focal_date, yrange[1], focal_date, yrange[2], 'red')
@@ -660,11 +662,11 @@ query can be db.dataset.contact.like('Lach%')
   
     axis(1, at = at_dates, labels = label_dates, cex.axis = cex_context_xlab)
     #axis(3)
-  
+    if(show_today) segments(Sys.Date(), min(js), Sys.Date(), max(js), lty = 2, col = 'blue')
     
     #### detail ####
     js <- indat$loc2
-    
+    # todo
     plot(c(focal_date, focal_date + time_box), yrange, type = 'n', xlab = "", ylab = "", axes = F)
          
     mtext(c(indat_lab$container_task_title), 2, las =1, at = indat_lab$loc, cex = cex_detail_ylab)
@@ -673,10 +675,11 @@ query can be db.dataset.contact.like('Lach%')
          cex = cex_detail_labels)
     for(i in 1:nrow(indat)){
     # = 1
-      segments(indat$start_date[i] , js[i] , indat$start_date[i] , max(indat$loc2) + 1 , lty = 3)
-      segments(indat$start_date[i] , js[i] , indat$end_date[i] , js[i] )
+      segments(indat$start_date[i] , js[i] , indat$start_date[i] , max(indat$loc2) + 1 , lty = 3,
+        col = ifelse(indat$status[i] == "DONE", "grey","black"))
+      segments(indat$start_date[i] , js[i] , indat$end_date[i] , js[i],
+        col = ifelse(indat$status[i] == "DONE", "grey","black"))
     }
-  
     # done
     indat_done  <- indat[indat$status == "DONE",]
     points(indat_done$start_date, indat_done$loc2, pch = 16, cex = cex_detail_points, col = "darkgrey")
@@ -691,7 +694,10 @@ query can be db.dataset.contact.like('Lach%')
     # continuing
     bumped_up <- indat[indat$start_date < focal_date & indat$status != 'DONE',]
     text(focal_date, bumped_up$loc2 - smidge_lab, labels = bumped_up$task_id, pos = 4,
-         cex = cex_detail_labels, col = 'darkgrey')
+         cex = cex_detail_labels, col = 'darkred')
+    bumped_up2 <- indat[indat$start_date < focal_date & indat$status == 'DONE' & indat$end_date >= focal_date,]
+    text(focal_date, bumped_up2$loc2 - smidge_lab, labels = bumped_up2$task_id, pos = 4,
+         cex = cex_detail_labels, col = 'grey')
   
     
     # overdue
@@ -716,6 +722,7 @@ query can be db.dataset.contact.like('Lach%')
     axis(3, at = at_dates, labels = F)
     axis(3, at = at_dates2, labels = label_dates)
     #segments(min(xrange), max(yrange) + .09, max(xrange), max(yrange) + .09)  
+    if(show_today) segments(Sys.Date(), min(js), Sys.Date(), max(js) + 1, lty = 2, col = 'blue')
     
   }
   #ls()
@@ -750,17 +757,10 @@ query can be db.dataset.contact.like('Lach%')
   dat_out <- get_gantt_data(test_data = F)
   str(dat_out)
     svg("tests/AAPL.svg",height=26,width=18)
-    gantt_tufte(dat_out, focal_date = "2015-01-30",
+    gantt_tufte(dat_out, focal_date = "2015-01-30", cex_context_ylab = 0.45,
      min_context_xrange = "2015-01-01", time_box = 7 * 3.5, cex_detail_xlab = .4)
     dev.off()
   
-#+end_src
-
-#+RESULTS:
-: 1
-
-**** test2
-#+begin_src R :session *R* :tangle no :exports none :eval yes
   #### name:tat####
   #library(devtools)
   #install_github("ivanhanigan/disentangle")
@@ -777,6 +777,10 @@ query can be db.dataset.contact.like('Lach%')
 
 : 
 *** COMMENT test RMD
+<section>
+    <img style="float: left" src="AAPL.svg">
+  </section>
+
 #+name:make_html
 #+begin_src R :session *R* :tangle tests/gantt_tufte_test.Rmd :exports none :eval yes
   Overview of Gantt Chart
@@ -800,14 +804,14 @@ query can be db.dataset.contact.like('Lach%')
   ---
   
   This is a report of the TODO list broken down by LTERN Data Team member.
-  <section>
-  <img style="float: left" src="AAPL.svg">
-  </section>
+
+  
+  ![aa](AAPL.svg)  
 
   ```{r}
   print(cat("\n"))
   ```
-
+  
     
   ```{r echo = F, results = "hide", eval = T}
   #### name:test2####
@@ -852,11 +856,11 @@ query can be db.dataset.contact.like('Lach%')
   library("xtable")
   
   for(i in names(table(datin$name))){
-   #i <- names(table(datin$name))[1]
+   #i <-names(table(datin$name))[1]
   
    cat(i)
    cat("\n")
-   cat("---\n")
+   cat("===\nTODO\n---\n")
    # str(dat)
    xdat <- sqldf(
    sprintf("select name, t1.task_id,
@@ -874,8 +878,8 @@ query can be db.dataset.contact.like('Lach%')
     xdat$end_date <- as.character(format(xdat$end_date, "%A, %d-%b-%Y"))
    xdat1 <- subset(xdat, status == 'TODO')
    print(xtable(xdat1), type = "html", include.rownames = F)
-  
-   xdat2 <- subset(xdat, status == 'DONE2')
+   cat("DONE\n---\n")  
+   xdat2 <- subset(xdat, status == 'DONE')
    # xdat2
    if(nrow(xdat2) > 0){
      cat("\n")
@@ -885,12 +889,6 @@ query can be db.dataset.contact.like('Lach%')
   
   ```
   
-  ```{r echo = F, results = "hide", eval = F}
-  svg("AAPL.svg",height=26,width=25)
-  gantt_tufte(dat_out, focal_date = "2015-01-19",
-   min_context_xrange = "2015-01-01", time_box = 7 * 4.5, cex_detail_xlab = .4)
-  dev.off()
-  ```  
     
 #+end_src
 
